# mpskit

./: .clang-tidy  .cppcheck-suppressions  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dmrg.cpp  itensor_config.h.in  mpskit.cpp  options.mk
.github/workflows/: ci.yml
dmrg/: bose_hubbard_1d.cpp  bose_hubbard_1d.hpp  json.hpp  model.hpp  observable.cpp  observable.hpp  observer.cpp  observer.hpp  point_functions.cpp  point_functions.hpp  terms.cpp  terms.hpp  transverse_ising_1d.cpp  transverse_ising_1d.hpp  types.hpp  util.cpp  util.hpp
dmrg/models/: bose_hubbard_1d.cpp  bose_hubbard_1d.hpp  bosonic_1d.cpp  bosonic_1d.hpp  heisenberg_1d.cpp  heisenberg_1d.hpp  model.cpp  model.hpp  model_1d.cpp  model_1d.hpp  registry.cpp  registry.hpp  spin_half_1d.cpp  spin_half_1d.hpp  transverse_ising_1d.cpp  transverse_ising_1d.hpp
dmrg/models_bak/: bose_hubbard_1d.cpp  bose_hubbard_1d.hpp  model.hpp  spin_half_1d.cpp  spin_half_1d.hpp  transverse_ising_1d.cpp  transverse_ising_1d.hpp
examples/: .gitignore  bose_hubbard_1d.json  ising_lr_1d.json  ising_lr_square.json  transverse_ising_1d.json  transverse_ising_1d_quenched.json  transverse_ising_square.json  xy_spin_glass_1d.json
mpskit/: json.cpp  json.hpp  observable.hpp  observer.cpp  observer.hpp  point_functions.cpp  point_functions.hpp  tebd.cpp  tebd.hpp  terms.cpp  terms.hpp  types.hpp  util.cpp  util.hpp
mpskit/cmd/: analyze_basis.cpp  analyze_basis.hpp  create_state.cpp  create_state.hpp  dmrg.cpp  dmrg.hpp  entanglement_entropy.cpp  entanglement_entropy.hpp  list_observables.cpp  list_observables.hpp  list_one_point.cpp  list_one_point.hpp  list_two_point.cpp  list_two_point.hpp  max_bond_dimension.cpp  max_bond_dimension.hpp  overlap.cpp  overlap.hpp  tebd.cpp  tebd.hpp
mpskit/models/: bose_hubbard_1d.cpp  bose_hubbard_1d.hpp  bosonic_1d.cpp  bosonic_1d.hpp  heisenberg_1d.cpp  heisenberg_1d.hpp  ising_lr_1d.cpp  ising_lr_1d.hpp  ising_lr_square.cpp  ising_lr_square.hpp  model.cpp  model.hpp  model_1d.cpp  model_1d.hpp  model_2d.cpp  model_2d.hpp  registry.cpp  registry.hpp  spin_half_1d.cpp  spin_half_1d.hpp  spin_half_square.cpp  spin_half_square.hpp  transverse_ising_1d.cpp  transverse_ising_1d.hpp  transverse_ising_square.cpp  transverse_ising_square.hpp  xy_spin_glass_1d.cpp  xy_spin_glass_1d.hpp
mpskit/models/bosons/1d/: bose_hubbard_1d.cpp  bose_hubbard_1d.hpp  bosonic_1d.cpp  bosonic_1d.hpp
mpskit/models/spin_half/1d/: calabrese_2020.cpp  calabrese_2020.hpp  heisenberg_1d.cpp  heisenberg_1d.hpp  ising_lr_1d.cpp  ising_lr_1d.hpp  spin_half_1d.cpp  spin_half_1d.hpp  transverse_ising_1d.cpp  transverse_ising_1d.hpp  vitagliano_2010.cpp  vitagliano_2010.hpp  xy_inhom.cpp  xy_inhom.hpp  xy_spin_glass_1d.hpp
mpskit/models/spin_half/2d/: ising_lr_square.hpp  spin_half_square.hpp  transverse_ising_square.hpp  xy_spin_glass_square.cpp  xy_spin_glass_square.hpp
tools/: clang-format.sh  clang-tidy.sh  cppcheck.sh  iwyu-fix.sh  iwyu.sh
